fix: better alignment of the date in the post list

--- a/assets/css/post-meta.css
+++ b/assets/css/post-meta.css
@@ -12,4 +12,5 @@
 .post-meta time {
     flex: 1 0 auto;
     text-align: right;
+    align-self: flex-end;
 }
